# AxonCache

./: .bazelignore  .bazelrc  .clang-format  .clang-format-java  .clang-tidy  .gitignore  AxonCache.cpp  BUILD.bazel  CMakeLists.txt  Cargo.toml  Dockerfile  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel  axoncache.go  axoncache_test.go  bazel_test_output.txt  build.sh  build_bazel.sh  codecov.yaml  go.mod  go.sum  setup.py  version.h.in  versions.cmake
.github/workflows/: add_tag_on_master_merge.yaml  bazel-build.yml  black.yml  clang_format.yml  clang_format_java.yml  cli_ubuntu_24_04.yaml  go_cli.yaml  go_internal_unittest.yaml  go_module_unittest.yaml  gofmt.yml  java_module_integration_test.yaml  python_module_unittest.yaml  release.yml  rust_module_integration_test.yaml  unittest_macos-15.yaml  unittest_ubuntu_22_04.yaml  unittest_ubuntu_24_04.yaml
axoncache/: axoncache.cpp  axoncache_test.py  bench.py  build_python_module.sh
bazel/: BUILD.bazel  deps.bzl  test_utils.bzl
benchmark/: CMakeLists.txt  build_all.sh  run_all_cli_benchmarks.py
benchmark/src/: CacheBenchmarkUtils.h  FullBenchmark.cpp  alcachePerfTests.cpp  runPerfTests.cpp
benchmark/src/axoncache/cache/base/: HashedCacheBaseBenchmark.cpp
benchmark/src/axoncache/cache/probe/: ProbeBenchmark.cpp
benchmark/src/axoncache/cache/value/: ChainedValueBenchmark.cpp
cmake/: BuildFlags.cmake  CodeCoverage.cmake  Helpers.cmake  Options.cmake  ProjectLibraries.cmake  RpathConfig.cmake  Tools.cmake
cmake-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  spdlog.pc
cmake-build/CPM_modules/: Findabsl.cmake  Findcxxopts.cmake  Finddoctest.cmake  Findspdlog.cmake
cmake-build/main/: Makefile  axoncache_cli  cmake_install.cmake
cmake-build/src/: Makefile  cmake_install.cmake  libaxoncache.dylib
cmake-build/test/: CTestTestfile.cmake  Makefile  axoncacheTest  axoncacheTest_include-b858cb2.cmake  axoncacheTest_tests-b858cb2.cmake  cmake_install.cmake
cmd/: README.md  benchmark.go  cache_creator.go  kv_scanner.go  main.go  progress.go
cmd/rocksdb_benchmark/: build_and_run.sh  main.go
docs/: BENCH.md  CMakeLists.txt  Doxyfile  blog_post.md  conf.py
docs/pages/: about.dox
include/axoncache/: CacheGenerator.h  Constants.h  Math.h  version.h
include/axoncache/builder/: CacheBuilder.h  CacheFileBuilder.h
include/axoncache/cache/: BucketChainCache.h  CacheBase.h  CacheType.h  LinearProbeCache.h  LinearProbeDedupCache.h  MapCache.h
include/axoncache/capi/: CacheReaderCApi.h  CacheWriterCApi.h
include/axoncache/common/: SharedSettingsProvider.h  StringConversion.h  StringUtils.h  StringViewUtils.h  Utils.h
include/axoncache/consumer/: CacheValueConsumer.h  CacheValueConsumerBase.h  (+1 more)
internal/core/: cleanup.go  compress.go  download.go  download_test.go  file_utils.go  file_utils_darwin.go  file_utils_linux.go  gcs.go  kv.go  progress.go  properties.go  storage.go
java/: .gitignore  CMakeLists.txt  mk_jar.sh  pom.xml  run_benchmark.sh  run_example.sh  run_integration_test.sh
java/benchmark/: CacheBenchmark.java
java/examples/: CacheExample.java  settings.properties
java/jni/: CacheReaderJNI.cpp  CacheWriterJNI.cpp  JniHelpers.h
java/src/main/java/com/applovin/axoncache/: CacheReader.java  CacheWriter.java  NativeLibraryLoader.java
jni/: CMakeLists.txt
main/: CMakeLists.txt
main/src/: benchmark.cpp  benchmark.h  main.cpp  sample_input_file.txt  sample_input_file2.txt
rust/: CMakeLists.txt
src/: CMakeLists.txt  lib.rs
src/axoncache/: CacheGenerator.cpp
src/axoncache/builder/: CacheBuilder.cpp  CacheFileBuilder.cpp
src/axoncache/cache/: LinearProbeDedupCache.cpp
src/axoncache/cache/base/: HashedCacheBase.cpp  MapCacheBase.cpp
src/axoncache/cache/factory/: CacheFactory.cpp
src/axoncache/cache/hasher/: Xxh3Hasher.cpp
src/axoncache/cache/probe/: SimpleProbe.cpp
src/axoncache/cache/value/: ChainedValue.cpp  LinearProbeValue.cpp
src/axoncache/capi/: CacheInfo.h  CacheReaderCApi.cpp  CacheWriterCApi.cpp
src/axoncache/common/: xxhash.c
src/axoncache/consumer/: CacheValueConsumer.cpp  CacheValueConsumerBase.cpp  StringCacheValueConsumer.cpp
src/axoncache/domain/: CacheValue.cpp
src/axoncache/loader/: CacheLoader.cpp  CacheOneTimeLoader.cpp
src/axoncache/logger/: Logger.cpp
src/axoncache/memory/: MallocMemoryHandler.cpp  MemoryHandler.cpp  MmapMemoryHandler.cpp
src/axoncache/parser/: CacheValueParser.cpp
src/axoncache/reader/: DataFileReader.cpp  DataReader.cpp
src/axoncache/transformer/: StringListToString.cpp  StringViewToNullTerminatedString.cpp  TypeToString.cpp
src/axoncache/writer/: CacheFileWriter.cpp  CacheWriter.cpp
src/axoncache/writer/detail/: GenerateHeader.cpp
test/: CMakeLists.txt
test/data/: bench_cache.1758220992251.cache  example_fast_data.dta
test/src/: CacheTestUtils.h  FullCacheTest.cpp  ResourceLoader.cpp  ResourceLoader.h  alcacheTests.cpp  main.cpp
test/src/axoncache/builder/: CacheFileBuilderTest.cpp
test/src/axoncache/cache/base/: HashedCacheBaseTest.cpp  LinearProbeCacheTest.cpp  MapCacheBaseTest.cpp
test/src/axoncache/cache/factory/: CacheFactoryTest.cpp
test/src/axoncache/cache/probe/: LinearProbeTest.cpp  SimpleProbeTest.cpp
test/src/axoncache/cache/value/: ChainedValueTest.cpp
test/src/axoncache/capi/: CacheReaderCApiTest.cpp  CacheWriterCApiTest.cpp
test/src/axoncache/consumer/: CacheValueConsumerTest.cpp
test/src/axoncache/domain/: CacheHeaderTest.cpp  CacheValueTest.cpp
test/src/axoncache/memory/: MallocMemoryHandlerTest.cpp  MmapMemoryHandlerTest.cpp
test/src/axoncache/parser/: CacheValueParserTest.cpp
test/src/axoncache/reader/: DataFileReaderTest.cpp
test/src/axoncache/transformer/: StringListToStringTest.cpp  TypeToStringTest.cpp
test/src/axoncache/writer/: CacheFileWriterTest.cpp
test/src/axoncache/writer/detail/: GenerateHeaderTest.cpp
test_data/: fast_cache.1700516370759.cache
test_data/cache_updates/: test_cache.1700522842046.cache  test_cache.cache.timestamp.latest
tests/: rust_integration_tests.rs
(+31 files in other folders)
