[package]
name = "axoncache"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for AxonCache - a high-performance key-value cache system"
license = "MIT"
repository = "https://github.com/AppLovin/AxonCache"
keywords = ["cache", "key-value", "performance"]
categories = ["caching", "data-structures"]

[dependencies]
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
fastrand = "2.0"

[build-dependencies]
cc = "1.0"

[lib]
name = "axoncache"
path = "src/lib.rs"
